// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`uniq function > [1, 2, 3, 2, 3, 5, 1] |> uniq === [1, 2, 3, 5] 1`] = `
[
  1,
  2,
  3,
  5,
]
`;

exports[`uniq function > deepObject |> uniq 1`] = `
[
  {
    "a": {
      "b": 1,
    },
    "b": {
      "a": 1,
    },
  },
  {
    "a": {
      "b": 1,
    },
    "b": {
      "a": 2,
    },
  },
  {
    "a": {
      "b": 2,
    },
    "b": {
      "a": 1,
    },
  },
]
`;

exports[`uniq function > input |> uniq ({ a, b, c }) => ({ a, b }) === [{ a: 1, b: 1, c: "a" }, { a: 1, b: 2, c: "a" }] 1`] = `
[
  {
    "a": 1,
    "b": 1,
    "c": "a",
  },
  {
    "a": 1,
    "b": 2,
    "c": "a",
  },
]
`;

exports[`uniq function > input |> uniq ({ a, b, c }) => ({ a, c }) === [{ a: 1, b: 1, c: "a" }, { a: 1, b: 1, c: "b" }] 1`] = `
[
  {
    "a": 1,
    "b": 1,
    "c": "a",
  },
  {
    "a": 1,
    "b": 1,
    "c": "b",
  },
]
`;

exports[`uniq function > input |> uniq ({ a, b, c }) => a === [{ a: 1, b: 1, c: "a" }] 1`] = `
[
  {
    "a": 1,
    "b": 1,
    "c": "a",
  },
]
`;

exports[`uniq function > is a pure function 1`] = `
[
  {
    "a": 1,
    "b": 1,
    "c": "a",
  },
  {
    "a": 1,
    "b": 2,
    "c": "a",
  },
  {
    "a": 1,
    "b": 1,
    "c": "b",
  },
]
`;
